fix: fixed description text wrap issue in multiple places

--- a/frontend/sass/uswds/styles.scss
+++ b/frontend/sass/uswds/styles.scss
@@ -243,3 +243,8 @@ button {
 .usa-table thead th[aria-sort] button {
     font-weight: 600;
 }
+
+// WRAP TEXT
+.wrap-text {
+    word-break: break-word;
+    overflow-wrap: break-word;}
